src/client/components/pages/event-lookup-page/event-lookup-page.scss
.eventSearch {
  position: relative;
}

.noResults {
  position: absolute;
  top: 70px;
}

.searchBar {
  background-color: $sba-blue;
  label,
  h2 {
    color: white;
  }
  button {
    padding: 13px 22px;
    margin-top: 20px;
    @include grid-media($sba-grid-large) {
      margin-top: 0;
    }
  }

  @include grid-media($sba-grid-large) {
    padding-bottom: 195px;
  }
}

// Fields

.field {
  @include grid-media($sba-grid-large) {
    margin-right: 20px;
    float: left;
    display: inline-block;
  }
}

.search {
  position: relative;

  @include grid-media($sba-grid-small) {
    width: 100%;
  }

  @include grid-media($sba-grid-large) {
    width: 300px;
  }

  input {
    line-height: 34px;
    height: 48px;
    padding-right: 40px !important;
  }
}

.zip {
  position: relative;

  @include grid-media($sba-grid-small) {
    width: 100%;
  }

  @include grid-media($sba-grid-large) {
    width: 170px;
  }

  input {
    line-height: 34px;
    height: 48px;
  }
}

.multiSelect {
  label {
    font-weight: 400;
  }

  @include grid-media($sba-grid-large) {
    display: inline-block;

    width: 170px;
    margin-right: 20px;
    &:last-child {
      margin-right: 0;
    }
  }

  [class*='is-disabled'] {
    [class='Select-control'] {
      background: $sba-gray-light;
      pointer-events: none;
    }
    [class='Select-value-label'] {
      opacity: 0.5;
    }
  }
}

// Results

.searchResults {
  background-color: $sba-gray-lighter;
  overflow: hidden;
  @include grid-media($sba-grid-small) {
    padding: 40px 20px 40px 20px;
  }
  @include grid-media($sba-grid-medium) {
    padding: 45px 0px 45px 0px;
  }
  @include grid-media($sba-grid-large) {
    padding: 40px 0px 40px 0px;
  }
}

